[package]
name = "radial-chess"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15"
futures = "0.3"
log = "0.4"
env_logger = "0.9"
pleco = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
axum = {version = "0.6", features = ["ws"] }
jsonwebtoken = "8.1"
tower-http = { version = "0.3", features = ["cors"] }
hyper = "0.14"
http = "0.2"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
mysql = "25"
uuid = {version = "1.1", features = ["v4"] }
redis = {version = "0.27.5", features = ["aio", "tokio-comp"] }
redis-derive = "0.1.7"
chrono = "0.4"



